--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="band">
         <div class="item-1">
-            <a href="/Endless-Nightmare/index.html" target="_blank" class="card">
-                <div class="thumb" style="background-image: url(/Endless-Nightmare/assets/background-image.jpg)"></div>
+            <a href="../jornada-primeira-vaga/Endless-Nightmare/index.html" target="_blank" class="card">
+                <div class="thumb" style="background-image: url(../jornada-primeira-vaga/Endless-Nightmare/assets/background-image.jpg)"></div>
                 <article>
                     <h2>Endless Nightmare</h2>
                     <p>Landing page para divulgar um jogo de terror</p>
@@ -24,8 +24,8 @@
             </a>
         </div>
         <div class="item-2">
-            <a href="/Desafio-1/index.html" target="_blank" class="card">
-                <div class="thumb" style="background-image: url(/Desafio-1/assets/background-image.jpg);"></div>
+            <a href="../jornada-primeira-vaga/Desafio-1/index.html" target="_blank" class="card">
+                <div class="thumb" style="background-image: url(../jornada-primeira-vaga/Desafio-1/assets/background-image.jpg);"></div>
                 <article>
                     <h2>Your Travel Expert</h2>
                     <p>Landing page para divulgar um site sobre viagens</p>
@@ -33,8 +33,8 @@
             </a>
         </div>
         <div class="item-3">
-            <a href="/Healthy-Recipe/index.html" target="_blank" class="card">
-                <div class="thumb" style="background-image: url(/Healthy-Recipe/assets/background-image.jpg);"></div>
+            <a href="../jornada-primeira-vaga/Healthy-Recipe/assets/background-image.jpg" target="_blank" class="card">
+                <div class="thumb" style="background-image: url(../jornada-primeira-vaga/Healthy-Recipe/assets/background-image.jpg);"></div>
                 <article>
                     <h2>Healthy Recipes </h2>
                     <p>Landing Page para divulgar um site sobre alimentação</p>
