--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div class="item-3">
-            <a href="../jornada-primeira-vaga/Healthy-Recipe/assets/background-image.jpg" target="_blank" class="card">
+            <a href="../jornada-primeira-vaga/Healthy-Recipe/index.html" target="_blank" class="card">
                 <div class="thumb" style="background-image: url(../jornada-primeira-vaga/Healthy-Recipe/assets/background-image.jpg);"></div>
                 <article>
                     <h2>Healthy Recipes </h2>
